feat: move to overload typing for stream:true intent for sse
