# src/openrouter/models/createchatcompletionop.py
@@ -1,0 +1,35 @@
+"""Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT."""
+
+from __future__ import annotations
+from .chatcompletion import ChatCompletion, ChatCompletionTypedDict
+from .chatcompletionchunkwrapper import (
+    ChatCompletionChunkWrapper,
+    ChatCompletionChunkWrapperTypedDict,
+)
+from openrouter.utils import eventstreaming
+from typing import Union
+from typing_extensions import TypeAliasType
+
+
+CreateChatCompletionResponseTypedDict = TypeAliasType(
+    "CreateChatCompletionResponseTypedDict",
+    Union[
+        ChatCompletionTypedDict,
+        Union[
+            eventstreaming.EventStream[ChatCompletionChunkWrapperTypedDict],
+            eventstreaming.EventStreamAsync[ChatCompletionChunkWrapperTypedDict],
+        ],
+    ],
+)
+
+
+CreateChatCompletionResponse = TypeAliasType(
+    "CreateChatCompletionResponse",
+    Union[
+        ChatCompletion,
+        Union[
+            eventstreaming.EventStream[ChatCompletionChunkWrapper],
+            eventstreaming.EventStreamAsync[ChatCompletionChunkWrapper],
+        ],
+    ],
+)
