# src/openrouter/models/streamchatcompletionop.py
@@ -1,20 +1,0 @@
-"""Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT."""
-
-from __future__ import annotations
-from .chatcompletionchunk import ChatCompletionChunk, ChatCompletionChunkTypedDict
-from openrouter.types import BaseModel
-from typing_extensions import TypedDict
-
-
-class StreamChatCompletionResponseBodyTypedDict(TypedDict):
-    r"""Successful chat completion response"""
-
-    data: ChatCompletionChunkTypedDict
-    r"""Streaming chat completion chunk"""
-
-
-class StreamChatCompletionResponseBody(BaseModel):
-    r"""Successful chat completion response"""
-
-    data: ChatCompletionChunk
-    r"""Streaming chat completion chunk"""
